Fix partition name creation in RESTORE SNAPSHOT/COPY FROM
For snapshots the `PartitionName` is created from values provided in a
`TABLE PARTITION (col = val [, ...])` clause.

The logic involved could flip the order of the columns due to the use of
a `HashMap`, leading to wrong index names.

(cherry picked from commit d1e3d9466bd78c5eb20067c9c0dd1a702c0b6892)

# Conflicts:
#	docs/appendices/release-notes/5.7.1.rst